**pnp-0.6.27 08/18/2023** 
  * many php 8.2 fixes to remove 'deprecated' errors:
	pre-defining class variables (instead of dynamic),
	explicitly re-creating arrays as needed
	converting utf8_encode to mbstring

**pnp-0.6.26-2 09/18/2022
  * various php8 fixes
  * rrdtools needs env XDG_CACHE_HOME for fontconfig 
  * fix so that 'bucket' display works
  * fix so that pdf generation works

**pnp-0.6.?? ??/??/2017**
  * Bugfix: Fix for CVE-2017-16834

**pnp-0.6.26 08/21/2017**
  * Bugfix: Use complete option arguments for compatibility with rrdtool 1.6.0 (sbraz)
  * Bugfix: Zoom on a special template not possbile (stinnux)
  * Update: Update for FPDF (1.81) and FPDI (1.6.1) (Jan T. Bein )
  * Bugfix: address behaviour of rrdtool1.5+ tp not export timestamp by default 
  * Feature: Template for icinga2's built-in icinga check (Tontonitch)
  * Bugfix: fix non well formed numeric value encountered (sni)

**pnp-0.6.25 01/03/2015**
  * Update:  FPDF Update to Version 1.7
  * Bugfix:  Default source fixed by AWiddersheim
  * Bugfix:  Fixed urlencoding of Host- and Servicenames by Andreas Doehler
  * Bugfix:  Fixed Timeranges by AWiddersheim

**pnp-0.6.24 07/30/2014**
  * Bugfix:  Fixed some more XSS issues
  * Bugfix:  Fixed PHP issue while running on PHP 5.6 ( Reported by Sven Nierlein )

**pnp-0.6.22 06/04/2014**
  * Bugfix:  Fixed livestatus socket parsing ( Pekka Panula )
  * Bugfix:  Update check_mssql_health.php ( Miriam Zenk )
  * Feature: Add "version=tiny" to got get a stripped down version of graph ( Ricardo Bartels )
  * feature: Add STDIN Mode to process_perfdata.pl ( Robert Steininger )
  * Bugfix:  XSS issue fixed by Mikael Falkvidd. This issue was detected by Peter Österberg at Hexbit AB in a security assessment of op5 Monitor 6.3 on assignment by op5 AB. 

**pnp-0.6.21 03/24/2013**
  * Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)