@@ -11,26 +11,27 @@
 
 <p>
 
-Changes can be tracked on <a href="http://pnp4nagios.git.sourceforge.net/git/gitweb.cgi?p=pnp4nagios/pnp4nagios" class="urlextern" title="http://pnp4nagios.git.sourceforge.net/git/gitweb.cgi?p=pnp4nagios/pnp4nagios"  rel="nofollow">pnp4nagios.git.sourceforge.net</a>
+Changes can be tracked on <a href="https://github.com/pnp4nagios/pnp4nagios" class="urlextern" title="https://github.com/pnp4nagios"  rel="nofollow">https://github.com/pnp4nagios</a>
 </p>
 
 <p>
-The current Version is <a href="https://sourceforge.net/projects/pnp4nagios/files/latest" class="urlextern" title="https://sourceforge.net/projects/pnp4nagios/files/latest"  rel="nofollow"> pnp4nagios-0.6.25.tar.gz</a>
+with releases and downloads at <a href="https://github.com/pnp4nagios/pnp4nagios/releases" class="urlextern" title=""  rel="nofollow"> https://github.com/pnp4nagios/pnp4nagios/releases</a>
 </p>
 
+<p>
+Latest release and downloads at <a href="https://github.com/pnp4nagios/pnp4nagios/releases/latest" class="urlextern" title=""  rel="nofollow"> https://github.com/pnp4nagios/pnp4nagios/releases/latest</a>
+</p>
 </div>
 <!-- SECTION "Current stable PNP Version" [38-326] -->
-<h3><a name="latest_devel_version" id="latest_devel_version">Latest Devel Version</a></h3>
+<h3><a name="latest_devel_version" id="latest_devel_version">Documentation</a></h3>
 <div class="level3">
 
 <p>
 
-<a href="http://docs.pnp4nagios.org/_media/dwnld/pnp4nagios-head.tar.gz" class="urlextern" title="http://docs.pnp4nagios.org/_media/dwnld/pnp4nagios-head.tar.gz"  rel="nofollow"> pnp4nagios-head.tar.gz</a>
+<a href="https://github.com/pnp4nagios/docs" class="urlextern" title="https://github.com/pnp4nagios/docs"  rel="nofollow">Documentation</a>
 </p>
 
-<p>
-This is allways the latest GIT HEAD Version
-</p>
+
 <hr />
 
 <p>
@@ -42,9 +43,26 @@ Last Update: Mon Aug 21 17:49:39 CEST 2017
 <!-- SECTION "Latest Devel Version" [327-550] -->
 <h2><a name="changelog" id="changelog">ChangeLog</a></h2>
 <div class="level2">
-
 <p>
-
+<strong>pnp-0.6.27-4 09/05/2023</strong>
+<ul>   <li>update URLs and related text</li>
+        <li>clean up autoconf stuff</li>
+</ul>
+<p>
+<strong>pnp-0.6.27 08/18/2023</strong>
+<ul><li>>many php 8.2 fixes to remove 'deprecated' errors:</li>
+<li>        pre-defining class variables (instead of dynamic),</li>
+<li>        explicitly re-creating arrays as needed</li>
+<li>        converting utf8_encode to mbstring</li>
+</ul>
+<p>
+<strong>pnp-0.6.26-2 09/18/2022</strong>
+<ul><li>various php8 fixes</li>
+  <li>rrdtools needs env XDG_CACHE_HOME for fontconfig</li>
+  <li>fix so that 'bucket' display works</li>
+  <li>fix so that pdf generation works</li>
+</ul>
+<p>
 <strong>pnp-0.6.?? ??/??/2015</strong>
 </p>
 
