@@ -1,4 +1,8 @@
-**pnp-0.6.27 08/18/2023** 
+**pnp-0.6.27-4 09/05/2023**
+	* update URLs and related text
+	* clean up autoconf stuff
+
+**pnp-0.6.27 08/18/2023**
   * many php 8.2 fixes to remove 'deprecated' errors:
 	pre-defining class variables (instead of dynamic),
 	explicitly re-creating arrays as needed
@@ -6,7 +10,7 @@
 
 **pnp-0.6.26-2 09/18/2022
   * various php8 fixes
-  * rrdtools needs env XDG_CACHE_HOME for fontconfig 
+  * rrdtools needs env XDG_CACHE_HOME for fontconfig
   * fix so that 'bucket' display works
   * fix so that pdf generation works
 
